<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

<!--        <TextView-->
<!--            android:id="@+id/textview_not_compatible"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/placeholder_text"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            />-->

        <TextView
            android:id="@+id/textview_label_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_warning_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e00000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/textview_label_warning2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_warning2_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@id/textview_label_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Settings -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textview_label_warning2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:stretchColumns="0"
            android:shrinkColumns="1"
            >
            <!-- RSSI -->
            <TableRow
                android:id="@+id/row_rssi_header"
                android:paddingTop="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_rssi_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_rssi_title_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_min_rssi">
                <TextView
                    android:id="@+id/textview_label_min_rssi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_rssi_min_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <EditText
                    android:id="@+id/editview_min_rssi"
                    android:imeOptions="actionDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/setting_2_digit_text"
                    android:textColorHint="#20e0e0e0"
                    android:maxLength="2"
                    android:inputType="number"
                    android:padding="12dp"
                    android:importantForAutofill="no"
                    android:gravity="center_horizontal"
                    android:selectAllOnFocus="true"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_max_rssi">
                <TextView
                    android:id="@+id/textview_label_max_rssi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_rssi_max_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <EditText
                    android:id="@+id/editview_max_rssi"
                    android:imeOptions="actionDone"
                    android:hint="@string/setting_2_digit_text"
                    android:textColorHint="#20e0e0e0"
                    android:maxLength="2"
                    android:inputType="number"
                    android:padding="12dp"
                    android:importantForAutofill="no"
                    android:gravity="center_horizontal"
                    android:selectAllOnFocus="true"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_explanation_rssi"
                android:paddingBottom="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_explanation_rssi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_rssi_explanatory_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
            </TableRow>

            <!-- Power -->
            <TableRow
                android:id="@+id/row_power_header"
                android:paddingTop="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_power_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_power_title_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_min_power">
                <TextView
                    android:id="@+id/textview_label_min_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_power_min_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <EditText
                    android:id="@+id/editview_min_power"
                    android:imeOptions="actionDone"
                    android:hint="@string/setting_2_digit_text"
                    android:textColorHint="#20e0e0e0"
                    android:maxLength="2"
                    android:inputType="number"
                    android:padding="12dp"
                    android:importantForAutofill="no"
                    android:gravity="center_horizontal"
                    android:selectAllOnFocus="true"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_max_power">
                <TextView
                    android:id="@+id/textview_label_max_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_power_max_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <EditText
                    android:id="@+id/editview_max_power"
                    android:hint="@string/setting_2_digit_text"
                    android:imeOptions="actionDone"
                    android:textColorHint="#20e0e0e0"
                    android:maxLength="2"
                    android:inputType="number"
                    android:padding="12dp"
                    android:importantForAutofill="no"
                    android:gravity="center_horizontal"
                    android:selectAllOnFocus="true"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_explanation_power"
                android:paddingBottom="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_explanation_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_power_explanatory_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
            </TableRow>

            <!-- Accuracy -->
            <TableRow
                android:id="@+id/row_accuracy_header"
                android:paddingTop="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_accuracy_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_accuracy_title_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_samples_per_reading">
                <TextView
                    android:id="@+id/textview_label_samples_per_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_accuracy_samples_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <EditText
                    android:id="@+id/editview_samples_per_reading"
                    android:imeOptions="actionDone"
                    android:hint="@string/setting_3_digit_text"
                    android:textColorHint="#20e0e0e0"
                    android:maxLength="3"
                    android:inputType="number"
                    android:padding="12dp"
                    android:importantForAutofill="no"
                    android:gravity="center_horizontal"
                    android:selectAllOnFocus="true"
                    />
            </TableRow>
            <TableRow
                android:id="@+id/row_explanation_accuracy"
                android:paddingBottom="12dp"
                >
                <TextView
                    android:id="@+id/textview_label_explanation_accuracy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_accuracy_explanatory_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>