<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SensorTagFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

    <!-- Header View -->
    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:text="@string/placeholder_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/powerScaleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/powerStartLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/placeholder_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/powerScaleView"
                />
            <TextView
                android:id="@+id/powerTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power_level_label_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_constraintTop_toTopOf="@id/powerScaleView"
                app:layout_constraintStart_toEndOf="@id/powerStartLabelTextView"
                app:layout_constraintEnd_toStartOf="@id/powerEndLabelTextView"
                />
            <TextView
                android:id="@+id/powerEndLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintTop_toTopOf="@id/powerScaleView"
                app:layout_constraintEnd_toEndOf="@id/powerScaleView"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/powerProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>


    <!-- Result List View -->
    <ListView
        android:id="@+id/scannedTagListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView"
        android:background="#EEE"
        android:cacheColorHint="#EEE"
        android:layout_alignParentBottom="true"
        >
    </ListView>
<!--    <LinearLayout-->
<!--        android:id="@+id/resultView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="#e0e0f0"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toTopOf="@id/button_clear"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/headerView"-->
<!--        >-->

<!--        <TextView-->
<!--            android:id="@+id/aTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/placeholder_text"-->
<!--            android:textAppearance="?android:attr/textAppearanceMedium" />-->
<!--    </LinearLayout>-->

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/button_configure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
